# pywsd-datasets

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/en-semeval2007-aw/: test.parquet
data/en-semeval2013-aw/: test.parquet
data/en-semeval2015-aw/: test.parquet
data/en-senseval2-aw/: test.parquet
data/en-senseval3-aw/: test.parquet
src/pywsd_datasets/: __init__.py  cli.py  schema.py
src/pywsd_datasets/loaders/: raganato.py  ufsac.py  xl_wsd.py
src/pywsd_datasets/mappers/: babelnet_to_wn.py  omw_lookup.py  pwn3_to_oewn.py
src/pywsd_datasets/scripts/: build_all.py  coverage_report.py  evaluate_pywsd.py  push_to_hub.py
tests/: conftest.py  test_pwn3_to_oewn.py  test_raganato.py  test_schema.py  test_ufsac.py
